--- a/index.html
+++ b/index.html
@@ -11,24 +11,38 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1> 🥐 Croissant</h1>
-    <p>A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape.
-        Croissants and other viennoiserie are made of a layered yeast-leavened dough</p>
-    <ul class="nav nav-underline">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Homepage</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="photos.html">Photos</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-        </li>
-    </ul>
+    <div class="container">
+        <h1> 🥐 Croissant</h1>
+        <p class="text-center">A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for
+            its historical crescent
+            shape.
+            Croissants and other viennoiserie are made of a layered yeast-leavened dough</p>
+        <div class="footer">
+            <ul class="nav nav-underline">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Homepage</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="photos.html">Photos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
