added SEO friendly tags

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
-    <title>Contact</title>
+    <title>Contact-us/Delishfuud.com</title>
+    <meta name="description"
+        content="Get in Touch: We're here to assist you! Contact us today and let our friendly team help with any questions, concerns, or inquiries you may have">
 </head>
 
 <body>
@@ -30,13 +32,13 @@
         <div class="footer">
             <ul class="nav nav-underline">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Homepage</a>
+                    <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Homepage</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="photos.html">Photos</a>
+                    <a class="nav-link" href="photos.html" title="croissant-images">Photos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html" title="Contact-Us">Contact</a>
                 </li>
                 </li>
             </ul>
