--- a/photos.html
+++ b/photos.html
@@ -18,7 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
-    <title>photos</title>
+    <title>croissant-images/Delishfuud.com</title>
+    <meta name="description"
+        content="Pastry Perfection: Revel in the artistry of a perfectly formed croissant, showcasing its signature crescent shape and delicate, golden-brown exterior">
 
 </head>
 
@@ -26,7 +28,7 @@
     <div class="container">
         <h1>🥐 pictures of the croissants</h1>
         <div class="row">
-            <img src="/images/croissant1.jpeg" class="img-fluid col-4 shadow boarder rounded">
+            <img src="/images/croissant1.jpeg" class="img-fluid col-4 shadow rounded">
             <img src="/images/croissant2.jpg" class="img-fluid col-4 rounded shadow">
             <img src="/images/croissant3.jpg" class="img-fluid col-4 rounded shadow">
         </div>
@@ -34,13 +36,13 @@
     <div class="footer">
         <ul class="nav nav-underline">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Homepage</a>
+                <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Homepage</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="photos.html">Photos</a>
+                <a class="nav-link" href="photos.html" title="croissant-images">Photos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html" title="Contact-Us">Contact</a>
             </li>
             </li>
         </ul>
