--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Croissant-world/Delishfuud.com</title>
+    <meta class="description"
+        content="Indulge in Croissant Delights: Discover a world of buttery bliss on our croissant homepage, where you'll find an array of irresistible pastries crafted with love and expertise">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -31,13 +33,13 @@
         <div class="footer">
             <ul class="nav nav-underline">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Homepage</a>
+                    <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Homepage</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="photos.html">Photos</a>
+                    <a class="nav-link" href="photos.html" title="croissant-images">Photos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html" title="Contact-Us">Contact</a>
                 </li>
                 </li>
             </ul>
